Mobile touch hover effect test 2

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="pi">
+                <li class="pi hover">
                     <img class="logo_image dark_image" src="images/clients/col.png" />
                     <div class="feature-overlay">
                         <div class="feature_background col">
@@ -224,7 +224,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="pi cub">
+                <li class="pi cub hover">
                     <img class="logo_image dark_image" src="images/clients/cub.png" />
                     <div class="feature-overlay">
                         <div class="feature_background cub">
@@ -237,7 +237,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="pi ecom">
+                <li class="pi ecom hover">
                     <img class="logo_image" src="images/clients/2com.png" />
                     <div class="feature-overlay">
                         <div class="feature_background ecom">
