Mobile header issue

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Jordan McArdle">
-  <meta name="description" content="A portfolio">
+  <meta name="description" content="A portfolio site.">
   <link rel="shortcut icon" href="images/favicon.ico">
   <title>Jordan McArdle</title>
   <!--Google Fonts-->
@@ -15,13 +15,8 @@
   <link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.min.css">
   <!--Font Awesome/Devicon(s)-->
   <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="css/devicons/devicons.min.css">
-  <link rel="stylesheet" href="css/devicon/devicon.min.css" />
-  <link rel="stylesheet" href="css/devicon/devicon-colors.css" />
   <link rel="stylesheet" type="text/css" href="css/font-awesome-animation.min.css" />
-  <!-- Custom styles for this template -->
   <link rel="stylesheet" type="text/css" href="css/styles.css" />
-  <link href="http://vjs.zencdn.net/4.9.0/video-js.css" rel="stylesheet">
 </head>
 
 <body class="home-page" data-spy="scroll" data-target="#navbar">
@@ -83,6 +78,7 @@
                 by Jordan McArdle
             </h5>
         </div>
+        <div class="arrow bounce"></div>
     </div>
     <div id="about" class="ts">
         <div class="container">
@@ -118,7 +114,6 @@
                 </div>
             </div>
         </div>
-        <div class="arrow bounce"></div>
     </div>
     <div id="projects" class="ts portfolio">
         <div class="container centered">
@@ -209,7 +204,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="pi hover">
+                <li class="pi">
                     <img class="logo_image dark_image" src="images/clients/col.png" />
                     <div class="feature-overlay">
                         <div class="feature_background col">
@@ -224,7 +219,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="pi cub hover">
+                <li class="pi cub">
                     <img class="logo_image dark_image" src="images/clients/cub.png" />
                     <div class="feature-overlay">
                         <div class="feature_background cub">
@@ -237,7 +232,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="pi ecom hover">
+                <li class="pi ecom">
                     <img class="logo_image" src="images/clients/2com.png" />
                     <div class="feature-overlay">
                         <div class="feature_background ecom">
