--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="container centered">
             <h2>Here's some work that I have done.</h2>
             <div class="row">
-                <div class="col-md-6">
+                <!-- <div class="col-md-6">
                     <p class="lead">
                         What
                     </p>
@@ -128,13 +128,15 @@
                     <p class="lead">
                         What
                     </p>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="row">
             <ul class="portfolio_work">
                 <li class="pi circle">
-                    <img class="logo_image" src="images/clients/bulwark.png" />
+                    <div class="pi_logo_image">
+                        <img class="logo_image" src="images/clients/bulwark.png" />
+                    </div>
                     <div class="feature-overlay">
                         <div class="feature_background bw">
                         </div>
@@ -149,7 +151,9 @@
                     </div>
                 </li>
                 <li class="pi circle">
-                    <img class="logo_image" src="images/clients/hs.png" />
+                    <div class="pi_logo_image">
+                        <img class="logo_image" src="images/clients/hs.png" />
+                    </div>
                     <div class="feature-overlay">
                         <div class="feature_background hs">
                         </div>
@@ -162,7 +166,9 @@
                     </div>
                 </li>
                 <li class="pi circle">
-                    <img class="logo_image" src="images/clients/rka.png" />
+                    <div class="pi_logo_image">
+                        <img class="logo_image" src="images/clients/rka.png" />
+                    </div>
                     <div class="feature-overlay">
                         <div class="feature_background rka">
                         </div>
@@ -178,7 +184,9 @@
                     </div>
                 </li>
                 <li class="pi circle">
-                    <img class="logo_image" src="images/clients/vf.png" />
+                    <div class="pi_logo_image">
+                        <img class="logo_image" src="images/clients/vf.png" />
+                    </div>
                     <div class="feature-overlay">
                         <div class="feature_background vf">
                         </div>
@@ -192,7 +200,9 @@
                     </div>
                 </li>
                 <li class="pi">
-                    <img class="logo_image" src="images/clients/yt.png" />
+                    <div class="pi_logo_image">
+                      <img class="logo_image" src="images/clients/yt.png" />
+                    </div>
                     <div class="feature-overlay">
                         <div class="feature_background yt">
                         </div>
@@ -205,7 +215,9 @@
                     </div>
                 </li>
                 <li class="pi">
-                    <img class="logo_image dark_image" src="images/clients/col.png" />
+                    <div class="pi_logo_image">
+                        <img class="logo_image dark_image" src="images/clients/col.png" />
+                    </div>
                     <div class="feature-overlay">
                         <div class="feature_background col">
                         </div>
@@ -220,7 +232,9 @@
                     </div>
                 </li>
                 <li class="pi cub">
-                    <img class="logo_image dark_image" src="images/clients/cub.png" />
+                    <div class="pi_logo_image">
+                        <img class="logo_image dark_image" src="images/clients/cub.png" />
+                    </div>
                     <div class="feature-overlay">
                         <div class="feature_background cub">
                         </div>
@@ -233,7 +247,9 @@
                     </div>
                 </li>
                 <li class="pi ecom">
-                    <img class="logo_image" src="images/clients/2com.png" />
+                    <div class="pi_logo_image">
+                        <img class="logo_image" src="images/clients/2com.png" />
+                    </div>
                     <div class="feature-overlay">
                         <div class="feature_background ecom">
                         </div>
@@ -248,19 +264,35 @@
             </ul>
         </div>
     </div>
-    <div id="contact" class="ts">
-        <div class="container centered">
-            <h2>Contact Information</h2>
-            <div class="row">
-                <div class="col-md-4">
-                    EMAIL
-                </div>
-                <div class="col-md-4">
-                    PHONE
-                </div>
-                <div class="col-md-4">
-                    LINKS
-                </div>
+    <div id="contact">
+      <div class="overlay_filter ts">
+          <div class="container centered">
+              <h2>Contact Information</h2>
+              <div class="col-md-12">
+                <p class="lead">
+                    I am a software developer in the greater Nashville area.  I moved to Brentwood, TN, in January, 2015.  My contact information is below if you have any questions for me or just want to say 'Hi'!
+                </p>
+              </div>
+              <div class="row">
+                  <div class="col-md-4">
+                      Email:
+                      <span>
+                          <a href="mailto:jordanmcardle@gmail.com">jordanmcardle@gmail.com</a>
+                      </span>
+                  </div>
+                  <div class="col-md-4">
+                      Phone:
+                      <span>
+                          <a href="tel:2059609966">205.960.9966</a>
+                      </span>
+                  </div>
+                  <div class="col-md-4">
+                      Links:
+                      <span>
+
+                      </span>
+                  </div>
+              </div>
             </div>
         </div>
     </div>
