Video styling responsiveness

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
   <title>Jordan McArdle</title>
   <!--Google Fonts-->
   <link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700|PT+Sans+Narrow|Roboto+Condensed:400,700" rel="stylesheet" type="text/css">
+  <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.min.css">
-  <!--Font Awesome/Devicon(s)-->
+  <!--Font Awesome-->
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/font-awesome-animation.min.css" />
+  <!--Custom Styles-->
   <link rel="stylesheet" type="text/css" href="css/styles.css" />
 </head>
 
@@ -274,19 +276,13 @@
                 </p>
               </div>
               <div class="row">
-                  <div class="col-md-4">
+                  <div class="col-md-6">
                       Email:
                       <span>
                           <a href="mailto:jordanmcardle@gmail.com">jordanmcardle@gmail.com</a>
                       </span>
                   </div>
-                  <div class="col-md-4">
-                      Phone:
-                      <span>
-                          <a href="tel:2059609966">205.960.9966</a>
-                      </span>
-                  </div>
-                  <div class="col-md-4">
+                  <div class="col-md-6">
                       Links:
                       <span>
 
