Video of nashville

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <div class="video-container">
                 <div class="filter no_stretch"></div>
                 <video autoplay loop class="video-js">
-                    <source src="videos/Relaxation/Relaxation.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
-                    <source src="videos/Relaxation/Relaxation.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+                    <source src="videos/nashville.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+                    <source src="videos/nashville.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
                 </video>
                 <div class="poster">
                     <img class="no_stretch" src="videos/Relaxation/Relaxation.jpg" alt="">
