New nashville video and other background changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Jordan McArdle</title>
   <!--Google Fonts-->
   <link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700|PT+Sans+Narrow|Roboto+Condensed:400,700" rel="stylesheet" type="text/css">
-  <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+  <link href="http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext" rel="stylesheet" type="text/css">
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.min.css">
   <!--Font Awesome-->
@@ -36,7 +36,7 @@
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active">
-                        <a href="#intro_video">
+                        <a href="#home">
                             Home
                         </a>
                     </li>
@@ -64,14 +64,17 @@
             <div class="video-container">
                 <div class="filter no_stretch"></div>
                 <video autoplay loop class="video-js">
-                    <source src="videos/nashville.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
-                    <source src="videos/nashville.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+                    <source src="videos/nashville480.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+                    <source src="videos/nashville480.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
                 </video>
                 <div class="poster">
-                    <img class="no_stretch" src="videos/Relaxation/Relaxation.jpg" alt="">
+                    <img class="no_stretch" src="images/location.jpg" alt="">
                 </div>
             </div>
         </div>
+    </div>
+    <div id="home">
+      <div class="container">
         <div class="text-content">
             <h5 class="hello">Hello, world!</h5>
             <h5 class="jordan">
@@ -81,6 +84,7 @@
             </h5>
         </div>
         <div class="arrow bounce"></div>
+      </div>
     </div>
     <div id="about" class="ts">
         <div class="container">
@@ -119,19 +123,7 @@
     </div>
     <div id="projects" class="ts portfolio">
         <div class="container centered">
-            <h2>Here's some work that I have done.</h2>
-            <div class="row">
-                <!-- <div class="col-md-6">
-                    <p class="lead">
-                        What
-                    </p>
-                </div>
-                <div class="col-md-6">
-                    <p class="lead">
-                        What
-                    </p>
-                </div> -->
-            </div>
+            <h2>Take a look at some of my work.</h2>
         </div>
         <div class="row">
             <ul class="portfolio_work">
@@ -267,28 +259,26 @@
         </div>
     </div>
     <div id="contact">
-      <div class="overlay_filter ts">
-          <div class="container centered">
-              <h2>Contact Information</h2>
-              <div class="col-md-12">
-                <p class="lead">
-                    I am a software developer in the greater Nashville area.  I moved to Brentwood, TN, in January, 2015.  My contact information is below if you have any questions for me or just want to say 'Hi'!
-                </p>
-              </div>
-              <div class="row">
-                  <div class="col-md-6">
-                      Email:
-                      <span>
-                          <a href="mailto:jordanmcardle@gmail.com">jordanmcardle@gmail.com</a>
-                      </span>
-                  </div>
-                  <div class="col-md-6">
-                      Links:
-                      <span>
+        <div class="container centered ts">
+            <h2>Contact Information</h2>
+            <div class="col-md-12">
+              <p class="lead">
+                  I am a software developer in the greater Nashville area.  I moved to Brentwood, TN, in January, 2015.  My contact information is below if you have any questions for me or just want to say 'Hi'!
+              </p>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    Email:
+                    <span>
+                        <a href="mailto:jordanmcardle@gmail.com">jordanmcardle@gmail.com</a>
+                    </span>
+                </div>
+                <div class="col-md-6">
+                    Links:
+                    <span>
 
-                      </span>
-                  </div>
-              </div>
+                    </span>
+                </div>
             </div>
         </div>
     </div>
@@ -297,50 +287,50 @@
             <ul>
                 <li>
                     <a class="github" href="https://github.com/jmahc" target="_blank">
-                        <i class="move-me fa fa-github-square"></i>
-                        <span>
-                            GitHub
-                        </span>
+                      <span class="fa-stack fa-lg faa-parent animated-hover">
+                        <i class="fa fa-square-o fa-stack-2x"></i>
+                        <i class="move-me fa fa-github fa-stack-1x faa-burst"></i>
+                      </span>
                     </a>
                 </li>
                 <li>
                     <a class="linkedin" href="https://www.linkedin.com/in/jtmcardle" target="_blank">
-                        <i class="move-me fa fa-linkedin-square"></i>
-                        <span>
-                            LinkedIn
-                        </span>
+                      <span class="fa-stack fa-lg faa-parent animated-hover">
+                        <i class="fa fa-square-o fa-stack-2x"></i>
+                        <i class="move-me fa fa-linkedin fa-stack-1x faa-flash"></i>
+                      </span>
                     </a>
                 </li>
                 <li>
                     <a class="facebook" href="https://www.facebook.com/jmaccc" target="_blank">
-                        <i class="move-me fa fa-facebook-official"></i>
-                        <span>
-                            Facebook
-                        </span>
+                      <span class="fa-stack fa-lg faa-parent animated-hover">
+                        <i class="fa fa-square-o fa-stack-2x"></i>
+                        <i class="move-me fa fa-facebook fa-stack-1x faa-tada"></i>
+                      </span>
                     </a>
                 </li>
                 <li>
                     <a class="twitter" href="http://twitter.com/fjord_an" target="_blank">
-                        <i class="move-me fa fa-twitter-square"></i>
-                        <span>
-                            Twitter
-                        </span>
+                      <span class="fa-stack fa-lg faa-parent animated-hover">
+                        <i class="fa fa-square-o fa-stack-2x"></i>
+                        <i class="move-me fa fa-twitter fa-stack-1x faa-passing"></i>
+                      </span>
                     </a>
                 </li>
                 <li>
                     <a class="google" href="https://plus.google.com/u/0/104716789379686556900/about/p/pub" target="_blank">
-                        <i class="move-me fa fa-google-plus-square"></i>
-                        <span>
-                            Google+
-                        </span>
+                      <span class="fa-stack fa-lg faa-parent animated-hover">
+                        <i class="fa fa-square-o fa-stack-2x"></i>
+                        <i class="move-me fa fa-google-plus fa-stack-1x faa-float"></i>
+                      </span>
                     </a>
                 </li>
                 <li>
                     <a class="steam" href="https://plus.google.com/u/0/104716789379686556900/about/p/pub" target="_blank">
-                        <i class="move-me fa fa-steam-square"></i>
-                        <span>
-                            Steam
-                        </span>
+                      <span class="fa-stack fa-lg faa-parent animated-hover">
+                        <i class="fa fa-square-o fa-stack-2x"></i>
+                        <i class="move-me fa fa-steam fa-stack-1x faa-wrench"></i>
+                      </span>
                     </a>
                 </li>
             </ul>
