--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
                                 <h4>2-COM</h4>
                                 <p>
                                     I worked alongside an internal team to develop a proprietary e-commerce platform for 2-COM's clients.
-                                    My major contributions included creating a front-end template for future instances, implementing multi-lingual capabilities, and order reporting.
-                                    The technologies used include NodeJS, AngularJS and MongoDB, while interacting with NetSuite and 2-COM's own database system, Comtools.
+                                    My major contributions include creating a front-end template, multi-lingual capabilities, and order reporting.
+                                    I experimented with new technologies such as NodeJS, AngularJS and MongoDB, while interacting with NetSuite and 2-COM's own database system, Comtools.
                                 </p>
                             </div>
                             <div class="item-icons">
