--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="steam" href="https://plus.google.com/u/0/104716789379686556900/about/p/pub" target="-blank">
+                    <a class="steam" href="http://steamcommunity.com/id/jmahc/" target="-blank">
                         <span class="fa-stack fa-lg faa-parent animated-hover">
                           <i class="fa fa-square-o fa-stack-2x"></i>
                           <i class="move-me fa fa-steam fa-stack-1x faa-wrench"></i>
