Weather API test

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="mailto:jordanmcardle@gmail.com">Jordan McArdle</a>
+                <a class="navbar-brand">Jordan McArdle</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -360,6 +360,17 @@
             </ul>
         </div>
     </div>
+    <div id="weather">
+        <div class="container centered">
+          <h1 id="currentTemp"></h1>
+
+          <ul id="itemList"></ul>
+
+          <hr>
+
+          <ul id="itemList2"></ul>
+                  </div>
+    </div>
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -446,6 +457,55 @@
     <script src="scripts/script.js"></script>
     <script>
         Jmac.home.init();
+    </script>
+    <script src="scripts/require.js"></script>
+    <!-- <script src="scripts/forecast.io.js"></script> -->
+    <script>
+    var ForecastIO = require(["scripts/forecast.io"], function(ForecastIO) {
+      //This function is called when scripts/helper/util.js is loaded.
+      //If util.js calls define(), then this function is not fired until
+      //util's dependencies have loaded, and the util argument will hold
+      //the module value for "helper/util".
+      var latitude = '52.4308';
+      var longitude = '13.2588';
+
+    var forecast = new ForecastIO({
+      PROXY_SCRIPT: 'proxy.php'
+    });
+
+    /*
+     * GET CURRENT CONDITIONS
+     */
+    var condition = forecast.getCurrentConditions(latitude, longitude);
+
+    // echo temperature
+    document.getElementById("currentTemp").innerHTML = condition.getTemperature();
+
+    /*
+     * GET HOURLY CONDITIONS FOR TODAY
+     */
+    var conditions_today = forecast.getForecastToday(latitude, longitude);
+    var items = '';
+
+    for(i=0; i<conditions_today.length; i++) {
+      items += "<li>"  + conditions_today[i].getTime('HH:mm') + ': ' + conditions_today[i].getTemperature() + "</li>";
+    }
+
+    document.getElementById("itemList").innerHTML = items;
+
+    /*
+     * GET DAILY CONDITIONS FOR NEXT 7 DAYS
+     */
+
+    var conditions_week = forecast.getForecastWeek(latitude, longitude);
+    var items2 = '';
+
+    for(i=0; i<conditions_week.length; i++) {
+      items2 += "<li>"  + conditions_week[i].getTime('YYYY-MM-DD') + ': ' + conditions_week[i].getMaxTemperature() + "</li>";
+    }
+
+    document.getElementById("itemList2").innerHTML = items2;
+    });
     </script>
 </body>
 </html>
