--- a/index.html
+++ b/index.html
@@ -82,10 +82,7 @@
         </div>
         <div class="arrow bounce"></div>
     </section>
-    <svg id="bigHalfCircle" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
-      <path d="M0 100 C40 0 60 0 100 100 Z"/>
-    </svg>
-    <section id="about">
+    <section id="about" class="ts bs">
         <div class="container intro">
             <div class="intro-title centered">
                 <h2 class="bs">
@@ -112,19 +109,14 @@
             </div>
         </div>
     </section>
-    <!-- <svg id="slit" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
-      <path id="slitPath2" d="M50 100 C49 80 47 0 40 0 L47 0 Z" />
-      <path id="slitPath3" d="M50 100 C51 80 53 0 60 0 L53 0 Z" />
-      <path id="slitPath1" d="M47 0 L50 100 L53 0 Z" />
-    </svg> -->
-    <svg id="bigTriangleColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 102" preserveAspectRatio="none">
-				<path d="M0 0 L50 100 L100 0 Z"></path>
-		</svg>
-    <section id="projects" class="ts">
+    <svg id="bigHalfCircle" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
+      <path d="M0 100 C40 0 60 0 100 100 Z"/>
+    </svg>
+    <section id="projects" class="bs">
         <div class="container centered">
             <h2>Take a look at some of my work.</h2>
         </div>
-        <div class="row">
+        <div class="row ts">
             <ul class="portfolio">
                 <li class="portfolio-item circle bw">
                     <div class="item-image">
@@ -324,7 +316,7 @@
                                 <p>
                                     I worked alongside an internal team to develop a proprietary e-commerce platform for 2-COM's clients.
                                     My major contributions include creating a front-end template, multi-lingual capabilities, and order reporting.
-                                    I experimented with new technologies such as NodeJS, AngularJS and MongoDB, while interacting with NetSuite and 2-COM's own database system, Comtools.
+                                    I experimented with new technologies such as NodeJS, AngularJS and MongoDB, while interacting with NetSuite's and 2-COM's database system.
                                 </p>
                             </div>
                             <div class="item-icons">
@@ -391,7 +383,7 @@
                   <img class="modal-image" src="" />
                 </div>
                 <div class="modal-footer">
-                    <a class="modal-link" href="">http://</a>
+                    <span class="fake-nav cl-effect-1"><a class="modal-link" href="">http://</a></span>
                 </div>
             </div>
         </div>
